--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
 
-  <ul class="nav justify-content-end">
+  <ul class="nav justify-content-start">
     <li class="nav-item">
       <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
     </li>
@@ -9,6 +9,7 @@
       <a class="nav-link" routerLink="/log" routerLinkActive="active">Log</a>
     </li>
   </ul>
+  <hr>
 
   <router-outlet></router-outlet>
 
