--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,33 +1,22 @@
 <div>
 
-  <!-- <input [(ngModel)]="person.firstName" [ngModelOptions]="{standalone: true}">
-  <input [(ngModel)]="person.lastName" [ngModelOptions]="{standalone: true}">
-  <input [(ngModel)]="person.firstName" [ngModelOptions]="{standalone: true}"> -->
-
   <div class="row">
     <div class="col-sm-12">
-      <p>Aplicacion para buscar contenido en base a palabras en el API de Twitter, Todos los campos son necesarios y tiene un valor por default.</p>
+      <p>Aplicacion para buscar contenido en Twitter utilizando su misma API mediante palabras, todos los campos son necesarios y tienen un valor por default, Ademas se tiene el aparatado del LOG donde se muestra el historial de las busquedas y el resumen de los resultados encontrados.</p>
     </div>
   </div>
 
-
-
-
-
-
-  <form class="form" name="formSearch">
+  <form class="form" name="formSearch" (ngSubmit)="sendForm()">
 
     <div class="row">
       <div class="col-sm-4">
-        <label>Palabra / Hashtag</label>
-        <input [(ngModel)]="search.keyword" type="text" name="keyword" placeholder="Ejemplo: Programación / #TolucaFc "  class="form-control">
-
+        <label>Palabra</label>
+        <input [(ngModel)]="search.keyword" type="text" name="keyword" placeholder="Ejemplo: México"  class="form-control">
       </div>
 
       <div class="col-sm-4">
         <label>Limite de resultados</label>
         <input type="number" [(ngModel)]="search.limit" name="limit" class="form-control" max="100">
-
       </div>
 
       <div class="col-sm-4">
@@ -41,37 +30,64 @@
           </select>
         </div>
 
-
       </div>
     </div>
+
+    <div class="modal-footer">
+      <button type="button" name="button" class="btn btn-info" (click)="cleanForm()">Limpiar</button>
+      <button type="submit" name="button" class="btn btn-success"  [disabled]="search.keyword.length == 0">Buscar</button>
+    </div>
+
   </form>
   <br>
 
-  <div class="modal-footer">
-    <button type="button" name="button" class="btn btn-info" (click)="cleanForm()">Limpiar</button>
 
-    <button type="button" name="button" class="btn btn-success" (click)="sendForm()" [disabled]="search.keyword.length == 0">Buscar</button>
+
+
+
+  <!-- <div class="row">
+    <div class="col-sm-4">
+      Texto.
+    </div>
+    <div class="col-sm-4">
+      Fecha.
+    </div>
+    <div class="col-sm-4">
+    Favoritos.
+    </div>
   </div>
+
+
+  <div class="row" *ngFor="let status of list.statuses;">
+    <div class="col-sm-4">
+       <strong>{{ status.text }}</strong>
+    </div>
+    <div class="col-sm-4">
+      <strong>{{ status.created_at | date: 'dd/MM/yyyy' }}</strong>
+    </div>
+    <div class="col-sm-4">
+    <strong>{{ status.favorite_count }}</strong>
+    </div>
+    <hr>
+    <br>
+  </div> -->
 
 
   <div *ngFor="let status of list.statuses;">
     <div class="card" style="width: 100%;">
       <div class="card-block">
         <p class="card-text">{{ status.text }}</p>
-        Favoritos: <strong>{{ status.favorite_count }}</strong>
-        Fecha: <strong>{{ status.created_at | date: 'dd/MM/yyyy' }}</strong>
+        <div class="row">
+          <div class="col-sm-6">
+            Favoritos: <strong>{{ status.favorite_count }}</strong>
+          </div>
+          <div class="col-sm-6">
+            Fecha: <strong>{{ status.created_at | date: 'dd/MM/yyyy' }}</strong>
 
+          </div>
+        </div>
       </div>
     </div>
     <br>
   </div>
-
-
-
-
-  <!-- <div class="row" *ngFor="let status of list.statuses; let i = index">
-  <div class="col-sm-12">
-  {{ status.text }}
-</div>
-</div> -->
 </div>
